k8s/ingress.yml
# k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gradestar-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # === Cert-Manager Automation Activation ===
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # SRE Optimization for Cloudflare
    nginx.ingress.kubernetes.io/enable-real-ip: "true"

  # annotations:
  #   cert-manager.io/cluster-issuer: "letsencrypt-prod" # Automatically provisions SSL certificates!
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cloud.gradestarsolutions.com                                    # Hooks up SSL to your domain
    secretName: gradestar-tls-cert
  rules:
  - host: cloud.gradestarsolutions.com                               
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gradestar-app-service
            port:
              number: 80
